--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,19 +1,30 @@
-owner: maxirobledo 
-repo: upptime 
+# Change these first
+owner: maxirobledo # Your GitHub organization or username, where this repository lives
+repo: upptime # The name of this repository
 
 sites:
-  - name: Hello world
-    url: https://example.snappypreview.com/
-  
-assignees: maxirobledo
+  - name: Google
+    url: https://www.google.com
+  - name: Wikipedia
+    url: https://en.wikipedia.org
+  - name: Hacker News
+    url: https://news.ycombinator.com
+  - name: Test Broken Site
+    url: https://thissitedoesnotexist.koj.co
 
 status-website:
- # cname: status.snappypreview.com
+  # Add your custom domain name, or remove the `cname` line if you don't have a domain
+  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   baseUrl: /upptime
-  name: Snappy Status
-  theme: light
+  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  name: Upptime
+  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  navbar:
+    - title: Status
+      href: /
+    - title: GitHub
+      href: https://github.com/$OWNER/$REPO
 
-i18n:
-  activeIncidents: Active Incidents
-  allSystemsOperational: All systems are operational
-  footer: Powered by Upptime  
+# Upptime also supports notifications, assigning issues, and more
+# See https://upptime.js.org/docs/configuration
